examples/components/error/error-message-file-input.njk
<div class="form-group file-input form-error">
  <label class="form-label" for="fileinput">Vedhæft fil</label>
  <span class="form-error-message mb-3" id="fileinput-error"><span class="sr-only">Fejl:</span> Filen må ikke være større end 2MB</span>
  <input type="file" id="fileinput" name="file">
</div>
